Fixing bug 169753: NPN_GetURL and friends fail if called before NPP_New returns r=av sr=heikki